[project]
name = "pallma"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pallma"]

[dependency-groups]
all = [
    {include-group = "cli"},
    {include-group = "sdk"}
]
cli = [
    "typer>=0.16.0",
]
sdk = [
    "traceloop-sdk>=0.43.1",
]

dev = [
  {include-group = "lint"},
  {include-group = "test"}
]
lint = [
    "ruff>=0.12.7",
]
test = []

[project.scripts]
pallma = "pallma.cli.main:app"
